@@ -12,7 +12,8 @@ libmusic_la_SOURCES = \
 	music/index_map.hh music/data_map.hh \
 	array_data.cc music/array_data.hh \
 	configuration.cc music/configuration.hh \
-	parse.cc music/parse.hh
+	parse.cc music/parse.hh \
+	port.cc music/port.hh
 
 libmusic_la_HEADERS = music.hh
 libmusic_la_CXXFLAGS = @MPI_CXXFLAGS@
@@ -23,6 +24,7 @@ musicincludedir = $(includedir)/music
 musicinclude_HEADERS = music/runtime.hh music/setup.hh \
 		       music/index_map.hh music/data_map.hh \
 		       music/linear_index.hh music/array_data.hh \
-		       music/configuration.hh music/error.hh
+		       music/configuration.hh music/error.hh \
+		       music/port.hh
 
 MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
