@@ -1,3 +1,12 @@
+2007-11-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* Makefile.am: Added music/port.hh, port.cc.
+
+	* music/port.hh, port.cc: New files.
+
+	* music/runtime.hh (runtime::input_ports, runtime::output_ports):
+	New members.
+
 2007-11-08  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* configuration.cc (configuration::configuration): Handle dirct
